# hc-zomes

./: Cargo.toml  default.nix
crates/joining_code/: Cargo.toml
zomes/membrane_manager_lib/: Cargo.toml
zomes/profile/: Cargo.toml
