[workspace]

members = [
  "zomes/profile",
  "zomes/membrane_manager_lib"
]

[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[patch.crates-io]
hc_utils = {git = "https://github.com/holochain/hc-utils", branch = "v0.0.102", package = "hc_utils"}
# hc_utils = { path = "../hc-utils/crates/hc-utils" }
hdk = {git = "https://github.com/holochain/holochain", rev = "bd89d55e397baf7876099f600db997c89dd70fb6", package = "hdk"}
# hdk = { path = "../holochain/crates/hdk" }
holo_hash = {git = "https://github.com/holochain/holochain", rev = "bd89d55e397baf7876099f600db997c89dd70fb6", package = "holo_hash"}
